# archrssreader

./: .gitignore  pyproject.toml
archreader/: archreader.py
