[tool.poetry]
name = "archreader"
version = "0.1.0"
description = "a reader to get the arch linux rss feed"
authors = ["advaithm <advaith.madhukar@gmail.com>"]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
reader = "^1.12"
rich = "^9.5.1"
regex = "^2020.11.13"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

